@@ -19,13 +19,13 @@ included by the author in the released sources.
 .SH CONTROLS
 The standard controls are as follows:
 .TP 
-comma
+comma/left arrow
 pull up
 .TP
-slash
+slash/right arrow
 pull down
 .TP
-period
+period/down arrow
 flip plane
 .TP
 Z
