@@ -1,3 +1,7 @@
+
+Allow control via arrow keys, for people with "unusual" keyboard layouts
+Fix right-ctrl for ctrl-c (thanks to electricelf)
+
 v1.6.0
 
 Fixed bug with harry keys mode and returning to home from the left
